--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/kie-wb.html
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/kie-wb.html
@@ -4,8 +4,8 @@
     <meta http-equiv="x-ua-compatible" content="IE=10">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta artifactId="description" content="">
+    <meta artifactId="viewport" content="width=device-width">
 
     <title>KIE Workbench</title>
 
