--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/kie-drools-wb.html
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/src/main/webapp/kie-drools-wb.html
@@ -5,8 +5,8 @@
 
     <title>KIE Drools Workbench</title>
 
-    <script src="org.kie.workbench.drools.KIEDroolsWebapp/zeroclipboard/ZeroClipboard.min.js"></script>
-    <script src="org.kie.workbench.drools.KIEDroolsWebapp/zeroclipboard/ZeroClipboardLoader.js"></script>
+    <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/zeroclipboard/ZeroClipboard.min.js"></script>
+    <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/zeroclipboard/ZeroClipboardLoader.js"></script>
     <link rel="shortcut icon" href="favicon.ico" />
 
     <link rel="shortcut icon" href="images/drools.gif" type="image/gif"/>
@@ -37,20 +37,20 @@
   </div>
 
   <!-- The GWT js file generated at run time -->
-  <script type="text/javascript" src='org.kie.workbench.drools.KIEDroolsWebapp/org.kie.workbench.drools.KIEDroolsWebapp.nocache.js'></script>
+  <script type="text/javascript" src='org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp.nocache.js'></script>
   <!-- ACE - main .js file -->
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/ace.js" type="text/javascript" charset="utf-8"></script>
   <!-- Get .js files for any needed ACE modes and themes -->
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/theme-chrome.js" type="text/javascript" charset="utf-8"></script>
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/mode-html.js" type="text/javascript" charset="utf-8"></script>
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/mode-css.js" type="text/javascript" charset="utf-8"></script>
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/mode-drools.js" type="text/javascript" charset="utf-8"></script>
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/mode-text.js" type="text/javascript" charset="utf-8"></script>
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/mode-xml.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/theme-chrome.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/mode-html.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/mode-css.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/mode-drools.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/mode-text.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/mode-xml.js" type="text/javascript" charset="utf-8"></script>
 
   <!--  Needed for autocompletion support. -->
-  <script src="org.kie.workbench.drools.KIEDroolsWebapp/ace/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
+  <script src="org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/ace/ext-language_tools.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
